Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.14 - unreleased

	Tom Collins
	- vmysql.c: Increase buffer size in vauth_adduser() and use 
	  correct size when calling snprintf.

5.4.13 - released 16-Sep-05

	Riccardo Bini
	- vdelivermail.c: Use DOMAINS_DIR instead of hard-coded "domains".

	Jory A. Pratt
	- Compile libvpopmail with -fPIC option so amd64 users can compile
	  courier-authlib against libvpopmail.a.

	Tom Collins
	- hmac_md5.c: include <strings.h> for bzero and bcopy declarations.
	- configure.in: fix checks to limit enable-valias to MySQL only.
	- INSTALL: make clear that valias only applies to MySQL backend.
	- vpopmail.c: modify get_remote_ip() to work with xinetd, not
	  just tcpserver from daemontools.

5.4.12 - released 4-Jul-05

	Tom Collins
	- vdelivermail: read full message, even on catchall delete/bounce
	  to avoid SIGPIPE error if maildrop is calling vdelivermail.
	- vdelivermail: missing declaration when QMAIL_EXT defined.
	- vpopmail.h: remove declaration of crypt() and use #include 
	  crypt.h instead (if present).
	- configure: remove enable-domainquotas option until the domain
	  quota code is fixed.
	- maildirquota.c: fix bug from 5.4.11 that could accidentally
	  close stdin and result in a failed delivery in vdelivermail.
	- vpopmail.c: better error checking in r_mkdir().

5.4.11 - released 20-Mar-05

	Tom Collins
	- vdelivermail: code cleanup (fix exit codes, improve reliability,
	  fix problems with quotas). [837146, 840749, 904155, 1111291,
	  1119741, 1145618]

5.4.10 - released 20-Mar-05

	Stephan Tesch
	- md5.h: fix related to segfaults in vchkpw on Sparc64. [1144851]

	Peter Seiderer
	- vcdb.c: vauth_getpw() didn't check for invalid domain.

	Bill Shupp
	- vuserinfo: display spamassassin info.

	Anonymous
	- vpopmail.c: Add missing ifdef that preventing modification of
	  one-character username accounts.

	Niki Denev